--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -18,6 +18,7 @@ jobs:
       
   my-deploy:
     runs-on: ubuntu-latest
+    needs: [my-testing]
     steps:
     - name: print hello message
       run: echo "hello world from deploy!"
